--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "angular-material": "^1.2.5",
     "angular2-qrcode": "^2.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
