--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.0.0",
     "angular-material": "^1.2.5",
     "angular2-qrcode": "^2.0.3",
+    "axios": "^1.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
